<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pedometer App</string>
    <string name="app_welcome">Welcome! \nPlease sign in or create an account! \n</string>
    <string name="account_creation_view">Account Creation</string>
    <string name="login_view">Log In</string>
    <string name="action_settings">Settings</string>
    <string name="action_statistics">Statistics</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_2">Create Account</string>
    <string name="no_steps">The number of steps is!</string>
    <string name="button_send">Update Server</string>
    <integer name="google_play_services_version">2</integer>
    <string name="id">Enter a user ID</string>
    <string name="name">Enter your name</string>
    <string name="first_name">Enter your first name</string>
    <string name="surname">Enter your surname</string>
    <string name="username">Enter your username</string>
    <string name="email">Enter your email address</string>
    <string name="password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="device">Phone type</string>
    <string name="steps">Enter a number of steps</string>
    <string name="steps_total">0</string>
    <string name="steps_today">steps today!</string>
    <string name="json_start_sentence">There is no JSON info yet</string>
    <string name="named_welcome">Welcome x! \n</string>
    <string name="action_logout">Logout</string>
    <string name="goto_step_data">View recent step counts</string>
    <string name="main_page">Main page</string>
    <string name="white_space"> \n \n \n \n \n</string>
    <string name="creation_intro">Welcome to the Pedometer! Create an account to use our services!\n</string> 
    <string name="goto_leaderboard_data">View today\'s Leaderboards</string>
    <string name="goto_leaderboard">Leaderboards</string>
    <string name="main_refresh">Refresh</string>
    <string name="agreement_title">User Agreement</string>
    <string name="user_agreement">Usage of this app will involve regular information about the number of and time of your steps, as well as your location whilst using the applications. To use this app you must agree to these conditions. ]\n \n \n</string>
    <string name="agreement">I agree</string>
    <string name="disagreement">I disagree</string>
    <string name="hotsteps">Hotsteps</string>
    
      
</resources>
