<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/main_refresh"
         android:icon="@drawable/ic_menu_refresh"
         android:title="@string/main_refresh"
         android:alphabeticShortcut="r"
         android:orderInCategory="1"
         android:showAsAction="always" />

    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_statistics"/>
    
    <item
        android:id="@+id/action_leaderboards"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/goto_leaderboard"/>
    
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>
    
</menu>
