<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountCreation" >
    
    <TextView
        android:id="@+id/creation_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize = "24sp"
        android:text="@string/creation_intro" />
    
    <EditText android:id="@+id/first_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/creation_intro"
        android:singleLine="true"
        android:nextFocusDown="@+id/surname_field"
        android:hint="@string/first_name" />
    
    <EditText android:id="@id/surname_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name_field"
        android:singleLine="true"
        android:nextFocusDown="@+id/mail_field"
        android:hint="@string/surname" />
    
    <EditText android:id="@id/mail_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/surname_field"
        android:singleLine="true"
        android:nextFocusDown="@+id/username_field"
        android:hint="@string/email" />
    
    <EditText android:id="@id/username_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_field"
        android:singleLine="true"
        android:nextFocusDown="@+id/password_field"
        android:hint="@string/username" />
    
     <EditText android:id="@id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_field"
        android:singleLine="true"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/confirm_password_field"
        android:hint="@string/password" />
     
     <EditText android:id="@id/confirm_password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field"
        android:singleLine="true"
        android:inputType="textPassword"
        android:nextFocusDown="@+id/device_field"
        android:hint="@string/confirm_password" />
     
     <EditText android:id="@id/device_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password_field"
        android:singleLine="true"
        android:hint="@string/device" />
    
    <Button 
        android:id="@+id/send_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/device_field"
        android:text="@string/create_account_2"
        android:onClick="postAccount" />

</RelativeLayout>
