<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountLogin" >
    
    <TextView android:id="@+id/app_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize = "40sp"
        android:text="@string/app_welcome" />
    
    <EditText android:id="@+id/username_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_welcome"
        android:singleLine="true"
        android:nextFocusDown="@+id/password_field"
        android:hint="@string/username" />
    
     <EditText android:id="@+id/password_field"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_field"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/password" />
     
	<TextView
        android:id="@+id/white_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_field"
        android:text="@string/white_space"
    />
     
     <Button 
        android:id="@+id/login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/white_space"
        android:text="@string/login_view"
        android:onClick="logIn" />
     
     <Button
         android:id="@+id/create_account"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/login_button"
         android:text="@string/create_account_2"
         android:onClick="createAccountView" />

</RelativeLayout>
