<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PedometerActivity" >
    
    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@+id/pager"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent">
	</android.support.v4.view.ViewPager>
	    
     <TextView
        android:id="@+id/steps_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50sp"
        android:layout_centerHorizontal="true"
        android:textSize = "100sp"
        android:text="@string/steps_total"
        />
     
     <TextView
        android:id="@+id/steps_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/steps_total"
        android:minWidth="50sp"
        android:layout_centerHorizontal="true"
        android:textSize = "20sp"
        android:text="@string/steps_today"
        />
     
     <TextView
        android:id="@+id/white_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/steps_total"
        android:text="@string/white_space"
        />
     
    
<!--     <Button 
        android:id="@+id/send_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/white_space"
        android:text="@string/button_send"
        android:onClick="postData"
        /> -->
    
    <Button 
        android:id="@+id/goto_step_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/white_space"
        android:text="@string/goto_step_data"
        android:onClick="goToStepCounts"
        />
    
	<Button 
        android:id="@+id/goto_leaderboard_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/goto_step_data"
        android:text="@string/goto_leaderboard_data"
        android:onClick="goToLeaderboards"
        />

</RelativeLayout>
