<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >
    
    <TextView
	    android:id="@+id/agreement_intro"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize = "24sp"
	    android:text="@string/user_agreement" />
    
	<Button 
	  android:id="@+id/agree_button"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_below="@id/agreement_intro"
	  android:text="@string/agreement"
	  android:onClick="onAgree" />
	    
     <Button 
        android:id="@+id/disagree_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/agree_button"
        android:text="@string/disagreement"
        android:onClick="onDisagree" />
    
</RelativeLayout>
